--- a/gb/19/7/4/n11363509.md
+++ b/gb/19/7/4/n11363509.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jddrbr3603/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jddrbr3603/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jddrbr3603/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jddrbr3603/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jddrbr3603/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>克扣雇员2万薪水 堪培拉寿司店被罚10万</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年07月04日讯】（大纪元记者天睿<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%A0%AA%E5%9F%B9%E6%8B%89.md#1">堪培拉</a>一家<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%AF%BF%E5%8F%B8%E5%BA%97.md#1">寿司店</a>因故意<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3.md#1">克扣</a>移民工<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E8%96%AA%E6%B0%B4.md#1">薪水</a>，被罚款12.4万澳元。被克扣薪水的雇员大部分都是韩国人，持打工度假签证或学生签证来到的澳洲。</p>
-<p>公平工作专员署（FWO）2016年对<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%A0%AA%E5%9F%B9%E6%8B%89.md#1">堪培拉</a>、昆州和新州的40多家<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%AF%BF%E5%8F%B8%E5%BA%97.md#1">寿司店</a>进行了突击审计。堪培拉贝尔康南（Belconnen）区的Sushi Bay寿司店，被查出存在<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3.md#1">克扣</a>员工<ahref="https://github.com/jddrbr3603/djy/blob/master/gb/tag/%E8%96%AA%E6%B0%B4.md#1">薪水</a>的现象。</p>
+<p>【大纪元2019年07月04日讯】（大纪元记者天睿<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）澳洲<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A0%AA%E5%9F%B9%E6%8B%89.md#1">堪培拉</a>一家<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AF%BF%E5%8F%B8%E5%BA%97.md#1">寿司店</a>因故意<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3.md#1">克扣</a>移民工<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%96%AA%E6%B0%B4.md#1">薪水</a>，被罚款12.4万澳元。被克扣薪水的雇员大部分都是韩国人，持打工度假签证或学生签证来到的澳洲。</p>
+<p>公平工作专员署（FWO）2016年对<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A0%AA%E5%9F%B9%E6%8B%89.md#1">堪培拉</a>、昆州和新州的40多家<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%AF%BF%E5%8F%B8%E5%BA%97.md#1">寿司店</a>进行了突击审计。堪培拉贝尔康南（Belconnen）区的Sushi Bay寿司店，被查出存在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%85%8B%E6%89%A3.md#1">克扣</a>员工<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%96%AA%E6%B0%B4.md#1">薪水</a>的现象。</p>
 <p>据堪培拉时报报导，该店店主申丽贞（Yi Jeong Shin，译音）承认，从2015年11月至2016年3月这5个月期间，克扣22名雇员共计18,671澳元的薪水。大部分雇员都是韩国人，其中有4人是年龄在17岁到19岁的年轻人。这些雇员已经拿回了他们应得的薪水。</p>
 <p>雇员被克扣的薪水最高有1992澳元，包括工作日薪水、加班费、休假、临时工补贴。调查员还发现该寿司店有不遵守兼职协议和没有保存员工记录的违法行为。</p>
 <p>申丽贞在首都行政区（ACT）经营寿司连锁店。自从2007年，她就曾收到过克扣员工薪水的警告，监管人员曾发通知要她改正。2015年5月，她还接到过监管人员的正式警告。</p>
@@ -19,48 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/17/7/17/n9420352.md#1">澳洲八成非英语移民薪水低于法定标准</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/17/8/3/n9491502.md#1">墨尔本西区水果市场克扣难民工资被罚66万澳元</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/1/4/n10025554.md#1">拖欠员工薪资 拖欠员工薪资被罚83万美元</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/3/30/n10264607.md#1">上海数千环卫工人罢工 讨要被克扣薪水</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/4/10/n10291343.md#1">克扣员工薪水 布市两华裔经营7-11店被罚</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/7/27/n10594049.md#1">250万元工资无主 澳洲监管机构呼吁被欠薪者认领</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/12/1/n10885068.md#1">雇主不得问员工过往薪资  长岛苏福克郡立法</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/19/5/1/n11225630.md#1">南澳华女抱怨工资低被解雇 老板被罚赔4000元</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12372956.md#1">气象局预测堪培拉春季偏暖雨量较多</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12372762.md#1">政治渗透无望?华为结束赞助Raiders球队</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/7/17/n9420352.md#1">澳洲八成非英语移民薪水低于法定标准</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/8/3/n9491502.md#1">墨尔本西区水果市场克扣难民工资被罚66万澳元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/1/4/n10025554.md#1">拖欠员工薪资 拖欠员工薪资被罚83万美元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/30/n10264607.md#1">上海数千环卫工人罢工 讨要被克扣薪水</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/4/10/n10291343.md#1">克扣员工薪水 布市两华裔经营7-11店被罚</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/7/27/n10594049.md#1">250万元工资无主 澳洲监管机构呼吁被欠薪者认领</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/1/n10885068.md#1">雇主不得问员工过往薪资  长岛苏福克郡立法</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/5/1/n11225630.md#1">南澳华女抱怨工资低被解雇 老板被罚赔4000元</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739170.md#1">首都行政区政府今年无法实现土地释放目标</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739169.md#1">太阳熊奥泰在堪培拉动物园度过18岁生日</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/30/n10263600.md#1" target="_blank">共产暴政录：宣导暴力杀戮的彭湃</a></li><li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/11/27/n8533521.md#1" target="_blank">勤修炼 英文老师丢了药罐子</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/4/n12379422.md#1">【拍案惊奇】王岐山被低调？内蒙人脸识别抓人</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/3/n12378843.md#1">【新闻看点】中共少将泄疫苗真相？地下钱庄探秘</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/3/n12378342.md#1">【有冇搞错】中印冲突惊现雪山狮子旗 非同小可</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12375291.md#1">美中进入冷战？蓬佩奥：习书记已做选择</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12374481.md#1">【拍案惊奇】王毅欧洲行受辱 拜登团队资助暴徒</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12375030.md#1">中印边境冲突不止 传印军连长遭共军枪杀</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12373697.md#1">二亿元飞机半价也卖不出 赵本山遭女儿吐槽</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/3/n12376709.md#1">巨石强森惊爆确诊中共肺炎 全家都中镖</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12375748.md#1">黄秋生生日许愿：将一生所学教给台湾下一代</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12373556.md#1">曾遭设局嫖娼封杀六年 黄海波参加聚会疑复出</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12373905.md#1">章子怡追剧发长文 平息Angelababy演技争议</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12374745.md#1">流浪狗被涂画成老虎 马国动保团体悬赏缉凶</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/1/n12372441.md#1">俄公布“沙皇炸弹”测试画面 史上最强核爆</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12374457.md#1">殡仪馆员工打开尸袋 美国女子“复活”</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/2/n12374969.md#1">环太平洋军演 导弹击沉美军靶船画面曝光</a></li>
-<li><a href="https://github.com/jddrbr3603/djy/blob/master/gb/20/9/3/n12377585.md#1">美国警察逮捕市长 网民：中共公安敢吗？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741053.md#1">【财商天下】大陆消费和信贷塌方 失业率创新高</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13740913.md#1">【时事军事】俄军与M777第一次对话 就尝到滋味</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jddrbr3603/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jddrbr3603/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/4/n11363509.htm">克扣雇员2万薪水 堪培拉寿司店被罚10万</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/4/n11363509.htm">克扣雇员2万薪水 堪培拉寿司店被罚10万</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/jddrbr3603/djy/blob/master/gb/19/7/4/n11363509.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jddrbr3603/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jddrbr3603/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jddrbr3603/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jddrbr3603/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/19/7/4/n11363509.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
